# mice

./: CMakeLists.txt  FindTests.cmake  README.md  example.cc  li.cc  li.h  mice.cc  mice.h  requirements.txt
tests/: test_li.cc
